update in workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,6 +3,10 @@
 
 name: Node.js CI
 
+on:
+  push:
+    branches: [ "dev-deply" ]
+
 jobs:
   build:
 
@@ -30,7 +34,7 @@ jobs:
     
     - name : Build
       run: npm run build
-
+      
     - name: Deploy
       run: |
         git config --global user.name $user_name
