--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "foresewebsite",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://subburamanathan-7.github.io/Forese-Website",
+  "homepage": "http://subburamanathan-7.github.io/Forese-Website",
   "dependencies": {
     "@react-spring/web": "^9.7.4",
     "@testing-library/jest-dom": "^5.17.0",
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.2.0",
     "tailwindcss": "^3.4.9"
   }
